--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 aiofiles==23.2.1
 anyio==4.4.0
+black==24.4.2
 blinker==1.8.2
 certifi==2024.2.2
 click==8.1.7
@@ -17,9 +18,13 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
 MarkupSafe==2.1.5
+mypy-extensions==1.0.0
 numpy==1.26.4
 ollama==0.2.0
+packaging==24.1
 pandas==2.2.2
+pathspec==0.12.1
+platformdirs==4.2.2
 priority==2.0.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
